tests/commands/snapshots/integration_test__commands__test_assert_diff__changes_create-2.snap
---
source: tests/commands/test_assert_diff.rs
expression: "normalize_console_output(stderr, hmap! { to_str!(dir_path) => \"<temp_dir>\" })"
---
Error: Hash has changed after running command: 3c4b0b00c86eac64 != b8e7fdacc7914ca7
