tests/commands/snapshots/integration_test__commands__test_assert_diff__changes_create.snap
---
source: tests/commands/test_assert_diff.rs
expression: "normalize_console_output(stdout, hmap! { to_str!(dir_path) => \"<temp_dir>\" })"
---
[INFO] Hash before command run: 3c4b0b00c86eac64
[INFO] Running command as child process: ["sh", "-c", "echo 'New file content' > target/new_file.txt"]
[INFO] Hash after command run: b8e7fdacc7914ca7
