tests/commands/snapshots/integration_test__commands__test_assert_diff__changes_delete.snap
---
source: tests/commands/test_assert_diff.rs
expression: "normalize_console_output(stdout, hmap! { to_str!(dir_path) => \"<temp_dir>\" })"
---
[INFO] Hash before command run: 3c4b0b00c86eac64
[INFO] Running command as child process: ["sh", "-c", "rm target/subdir/file3.txt;"]
[INFO] Hash after command run: 6c4ef5f0b392255a
