tests/commands/snapshots/integration_test__commands__test_assert_diff__no_command_to_run.snap
---
source: tests/commands/test_assert_diff.rs
expression: "normalize_console_output(stderr, hmap! { to_str!(dir_path) => \"<temp_dir>\" })"
---
Error: No command specified to run.
