tests/commands/snapshots/integration_test__commands__test_assert_diff__nonexistent_directory.snap
---
source: tests/commands/test_assert_diff.rs
expression: "normalize_console_output(stderr, hmap! { to_str!(dir_path) => \"<temp_dir>\" })"
---
Error: Target path does not exist: <temp_dir>/target
